@@ -1,10 +1,10 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-1.4
-Date: 2009-11-17
+Version: 0.5-1.5
+Date: 2009-11-19
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
-Depends: R (>= 2.7.0)
+Depends: R (>= 2.7.0), methods
 Imports: slam (>= 0.1-1)
 Suggests: filehash, proxy, Rgraphviz, Rmpi, RWeka, snow, Snowball, XML
 Description: A framework for text mining applications within R.
